# TypeTraits

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-single-platform.yml
cmake/dependency/: CMakeLists.txt
include/: traits.h  traits_static.h
test/: CMakeLists.txt  run_tests.cc  traits_tests.cc
